# polydata-core

./: README.md  polydata-core.cabal
src/Data/: Poly.hs
src/Data/Poly/: IsPoly.hs
