name:                polydata-core
version:             0.1.0.0
synopsis:
description:
homepage:            https://github.com/clintonmead/polydata-core#readme
license:             BSD3
license-file:        LICENSE
author:              Clinton Mead
maintainer:          clintonmead@gmail.com
copyright:           Copyright: (c) 2017 Clinton Mead
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with: GHC == 8.0.2
bug-reports: https://github.com/clintonmead/polydata-core/issues

library
  hs-source-dirs:      src
  exposed-modules:     Data.Poly, Data.Poly.IsPoly
  build-depends:       base == 4.9.*
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/clintonmead/polydata-core
